# encode

./: __init__.py  encode.py  pyproject.toml  setup.py
src/encode/: __init__.py  encode.py
